--- a/DeepHyperion+SaFliTe/DeepHyperion+SaFliTe_Chatgpt3.5/.env
+++ b/DeepHyperion+SaFliTe/DeepHyperion+SaFliTe_Chatgpt3.5/.env
@@ -38,7 +38,7 @@ DOCKER_TIMEOUT=1000
 SIMULATION_TIMEOUT=970
 
 #chatgpt api
-chatGPT_api_key=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
+chatGPT_api_key=
 chatGPT_model=gpt-3.5-turbo-1106
 TEMPERATURE=0
 TOP_P=0
